fixed the padding on the collapsed navbar

--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -56,6 +56,7 @@ nav {
     transition: background-color 1s;
     z-index: 1;
     padding: 20px;
+    background-color: #ffffff;
 }
 
 .nav-links {
@@ -63,7 +64,7 @@ nav {
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 20px;
-    }
+}
 
 .nav-links li {
     list-style: none;
@@ -72,7 +73,8 @@ nav {
 }
 
 .nav-links li a {
-    padding: 20px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .nav-links li a:hover {
@@ -520,6 +522,10 @@ p#copyright {
         width: 95%;
     }
 
+    nav {
+        background-color: transparent;
+    }
+
     .nav-links {
         position: absolute; 
         background-color: #7f9b7f;
@@ -527,6 +533,7 @@ p#copyright {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         height: 100vh;
         width: 50%;
         transform: translateX(100%);
@@ -537,7 +544,7 @@ p#copyright {
     .nav-links li {
         font-size: 20px;
         line-height: 1em;
-        padding: 10%;
+        padding: 5%;
     }
 
     .nav-links li a {
